# the_factory

./: .gitignore  CLAUDE.md  Cargo.toml  PLAN.md  README.md  TODO.md  deny.toml  rustfmt.toml
.githooks/: install.sh  pre-commit  pre-push
.github/workflows/: ci.yml
docs/: misc-notes-and-backlog.md
docs/refactor/: README.md  inventory-production-refactor.md  recipe-logistics-coordination.md  task-system-notes.md  worker-state-management.md
src/: buildings.rs  camera.rs  constants.rs  grid.rs  invariants.rs  items.rs  lib.rs  main.rs  resources.rs  ui.rs  workers.rs
src/assets/: buildings.ron  items.ron  recipes.ron
src/materials/: items.rs  mod.rs  recipes.rs
src/structures/: building_config.rs  commitment.rs  construction.rs  construction_auto_pull.rs  mod.rs  placement.rs  production.rs  systems.rs  validation.rs
src/systems/: compute.rs  display.rs  mod.rs  network.rs  operational.rs  power.rs  scanning.rs
src/ui/: building_buttons.rs  building_menu.rs  icons.rs  interaction_handler.rs  mod.rs  production_display.rs  score_display.rs  scroll.rs  sidebar.rs  sidebar_tabs.rs  spawn_worker_button.rs  style.rs  tooltips.rs  workflow_creation.rs  workflow_panel.rs
src/ui/modes/: mod.rs  placement.rs  workflow_builder.rs  workflow_create.rs
src/ui/panels/: mod.rs  production_hud.rs  top_bar.rs  workflow_list.rs
src/ui/popups/: building_menu.rs  mod.rs  tooltip.rs  workflow_action.rs
src/workers/: dispatcher.rs  mod.rs  orchestrator.rs  pathfinding.rs  pooling.rs  spawning.rs  tasks.rs
tests/: CLAUDE.md
tests/integration/: main.rs
(+25 files in other folders)
