[package]
name = "the_factory"
version = "0.1.3"
edition = "2021"

[dependencies]
bevy = "0.16"
rand = "0.8.3"
serde = "1.0.219"


# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[lints.rust]
unsafe_code = "forbid"
dead_code = "allow"

[lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
missing_errors_doc = "warn"
missing_panics_doc = "warn"
must_use_candidate = "warn"
module_name_repetitions = "allow"
unused_async = "allow"
# Bevy-specific pattern allows
needless_pass_by_value = "allow"  # Bevy systems require by-value parameters
type_complexity = "allow"          # Bevy queries naturally have complex types
too_many_arguments = "allow"       # Bevy systems accumulate dependencies as parameters
